# conew

./: CMakeLists.txt  README.md  icd_manifest.json
.github/workflows/: build.yml
etc/exynostools/: performance_mode.conf
profile/winlator/: default.json  dxvk.env  mesa.env
src/: CMakeLists.txt  bc_decode_comp.comp  caps.cpp  caps.hpp  exports.map  forward.cpp  forward.hpp  logging.cpp  logging.hpp  pipeline_cache.cpp  pipeline_cache.hpp  profile_manager.cpp  profile_manager.hpp  vetsion.hpp  warpper.cpp
tools/: package.py  validate.py
usr/share/: meta.json
